# ScholarRAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EXERCISES.md  Makefile  README.md  alembic.ini  docker-compose.yml  instructions.txt  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260713_2358_a012b641fda1_initial_schema.py  20260716_2117_ca9f1373636f_add_raw_content_to_documents.py  20260716_2231_3c3e6004b87e_initial_schema.py
data/eval/: golden.json  hard.json  synthetic.json
data/sample_corpus/: embeddings.md  rag.md  transformers.txt
docker/postgres-init/: 01-databases.sql
docs/: BENCHMARKS.md  DESIGN.md  RESUME_BULLETS.md
src/scholarrag/: __init__.py  config.py  corpus.py  logging.py
src/scholarrag/api/: deps.py  main.py  middleware.py
src/scholarrag/api/routes/: documents.py  query.py
src/scholarrag/cache/: __init__.py  answer_cache.py
src/scholarrag/db/: __init__.py  engine.py  models.py  repository.py
src/scholarrag/embeddings/: __init__.py  base.py  fake.py  local.py
src/scholarrag/eval/: __init__.py  compare.py  dataset.py  mlflow_tracking.py  ragas_eval.py  retrieval_metrics.py  runner.py
src/scholarrag/generation/: __init__.py  answerer.py  base.py  citations.py  prompts.py
src/scholarrag/guardrails/: __init__.py  input.py  output.py
src/scholarrag/ingestion/: __init__.py  chunk.py  hashing.py  parse.py  pipeline.py
src/scholarrag/llm/: __init__.py  anthropic.py  base.py  fake.py  gemini.py  prompts.py
src/scholarrag/observability/: __init__.py  langfuse.py  otel.py
src/scholarrag/pipeline/: __init__.py  agentic_engine.py  engine.py  langchain_engine.py
src/scholarrag/retrieval/: __init__.py  base.py  dense.py  fusion.py  hybrid.py  lexical.py  rerank.py  rewrite.py
src/scholarrag/scripts/: __init__.py  eval.py  eval_agentic.py  eval_rag.py  gen_eval.py  seed.py
src/scholarrag/ui/: __init__.py  app.py  client.py
src/scholarrag/vectorstore/: __init__.py  base.py  local.py  pinecone.py
src/scholarrag/workers/: __init__.py  celery_app.py  deps.py  tasks.py
tests/: conftest.py  test_agentic_engine.py  test_api.py  test_api_documents.py  test_api_query.py  test_cache.py  test_config.py  test_db.py  test_embeddings.py  test_eval_compare.py  test_eval_metrics.py  test_eval_retrieval.py  test_exercises.py  test_fusion.py  test_generation.py  test_guardrails.py  test_hybrid.py  test_ingestion_chunk.py  test_ingestion_parse.py  test_ingestion_pipeline.py  test_langchain_engine.py  test_llm.py  test_observability.py  test_pipeline.py  test_ragas_eval.py  test_rerank.py  test_retrieval.py  test_rewrite.py  test_ui_client.py  test_vectorstore.py  test_workers.py
tests/fixtures/: sample.md  sample.txt
