[project]
name = "scholarrag"
version = "0.1.0"
description = "A production-style Retrieval-Augmented Generation platform with hybrid retrieval, reranking, evaluation, and observability."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Julian" }]

# Phase 0 keeps the core dependency set deliberately light so `make test` and CI
# stay fast and hermetic. Heavier concerns (embeddings/torch, LangChain, Pinecone,
# Celery, RAGAS, MLflow, ...) are added in their own phases via optional groups.
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",  # required for FastAPI file uploads (UploadFile/File)
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "numpy>=2.1",
    "httpx>=0.28",
    # Phase 1: relational metadata + full-text index, with versioned migrations.
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    # Phase 1 (Step 3): PDF text extraction. Pure-Python, MIT, tiny — kept in
    # core so PDF parsing is covered by CI.
    "pypdf>=5.0",
    # Phase 1 (Step 5): async ingestion workers. [redis] pulls the Redis broker
    # client. Needed by both the API (to enqueue) and the worker (to consume).
    "celery[redis]>=5.4",
    # Phase 2: the production vector store (serverless, free Starter tier). Only
    # used when PINECONE_API_KEY is set; CI falls back to LocalVectorStore.
    "pinecone>=5.0",
]

[project.optional-dependencies]
# Populated in later phases; declared now so the layering is visible.
llm = ["anthropic>=0.40"]
# Local embeddings pull in torch (large). Kept OUT of core so tests/CI stay fast
# — they use the dependency-free FakeEmbedder. `make install` (--all-extras)
# installs this for real embeddings locally.
embeddings = ["sentence-transformers>=3.0"]
ingestion = []
retrieval = []
eval = []

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholarrag"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# Alembic migrations are autogenerated — don't lint/format their long DDL lines.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = ["scholarrag.*"]
disallow_untyped_defs = true

# Optional third-party packages installed only in later phases / production.
[[tool.mypy.overrides]]
module = ["pypdf.*", "celery.*"]
ignore_missing_imports = true

# pinecone and sentence-transformers ship types, but their unions (Index /
# CrossEncoder.predict) are noisy and they're installed only locally, not in CI —
# treat them as untyped (Any) so our thin wrappers stay clean and CI/local agree.
[[tool.mypy.overrides]]
module = ["pinecone.*", "sentence_transformers.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
# Warnings are errors for our own code; framework migration warnings we don't
# control are ignored explicitly so they don't mask real issues.
filterwarnings = [
    "error",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
